syntax = "proto3";

package grpcs;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "bima/pagination.proto";

option go_package = ".;grpcs";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
	info: {
		title: "Todo Service";
		version: "v1";
	};
};

message Todo {
    string id = 1;

    string task = 2;

}

message TodoResponse {
    Todo todo = 1;
}

message TodoPaginatedResponse {
    repeated Todo data = 1;
    PaginationMetadata meta = 2;
}

service Todos {
    rpc GetPaginated (Pagination) returns (TodoPaginatedResponse) {
        option (google.api.http) = {
            get: "/api/v1/todos"
        };
    }

    rpc Create (Todo) returns (TodoResponse) {
        option (google.api.http) = {
            post: "/api/v1/todos"
            body: "*"
        };
    }

    rpc Update (Todo) returns (TodoResponse) {
        option (google.api.http) = {
            put: "/api/v1/todos/{id}"
            body: "*"

            additional_bindings {
                patch: "/api/v1/todos/{id}"
                body: "*"
            }
        };
    }

    rpc Get (Todo) returns (TodoResponse) {
        option (google.api.http) = {
            get: "/api/v1/todos/{id}"
        };
    }

    rpc Delete (Todo) returns (TodoResponse) {
        option (google.api.http) = {
            delete: "/api/v1/todos/{id}"
        };
    }
}
